--- a/html&css-files/landing/landing.css
+++ b/html&css-files/landing/landing.css
@@ -1,7 +1,34 @@
+/* ======================
+--- Setup
+======================= */
+body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}
+/* ======================
+--- Page Header Area
+======================= */
+.page-header {
+  overflow:hidden;
+  background-image: url('/images/head-img-back.jpg');
+  width: 100%;
+  background-position:center;
+  background-repeat: no-repeat;
+  margin-left: auto;
+  margin-right: auto;
+  height: 300px;
+  border-bottom-color: #FF4500;
+  border-bottom-style: solid;
+  border-bottom-width: medium;
+}
+
+.head-text {
+  color: white;
+  text-align: left;
+  position: relative;
+}
 
 /* ======================
 --- Images
 ======================= */
-#header-image {
-  
-}
